Wed Oct  8 11:38:45 1997  Richard Henderson  <rth@cygnus.com>

	* elfcore.h (bfd_prstatus): Pedanticly, alignment_power should
	be LOG_FILE_ALIGN.

Wed Oct  8 11:36:00 1997  Richard Henderson  <rth@cygnus.com>

	* config.bfd: Missed one alpha* change.

Tue Oct  7 13:00:17 1997  Doug Evans  <dje@canuck.cygnus.com>

	* elf32-sparc.c (_bfd_sparc_elf_howto_table): Remove BFD64 support.
	* elf64-sparc.c (SPARC64_OLD_RELOCS): Undef.
	(MINUS_ONE): New macro.
	(sparc_elf_notsup_reloc): New function.
	(sparc64_elf_howto_table): Add entries for DISP64,PLT64,HIX22,LOX10,
	H44,M44,L44,REGISTER.
	(sparc_reloc_map): Likewise.  Map BFD_RELOC_CTOR to R_SPARC_64.
	(init_insn_reloc): New function.
	(sparc_elf_wdisp16_reloc): Use it.
	(sparc64_elf_relocate_section): Add entries for OLO10,HIX22,LOX10.

Tue Oct  7 11:40:37 1997  Ian Lance Taylor  <ian@cygnus.com>

	* som.c (som_construct_extended_name_table): Remove static
	function, and define as macro instead.

Fri Oct  3 14:02:17 1997  Richard Henderson  <rth@cygnus.com>

	* config.bfd: Change alpha-*-* to alpha*-*-*; config.guess now
	recognizes alphaev5 etc.
	* configure.host: Likewise.
	
Fri Oct  3 11:23:47 1997  Ian Lance Taylor  <ian@cygnus.com>

	Make ld -s work on AIX:
	* xcofflink.c (xcoff_link_add_symbols): Don't create the .debug
	section if we are stripping.
	(bfd_xcoff_size_dynamic_sections): Don't set the .debug section
	size if we are stripping.
	(_bfd_xcoff_bfd_final_link): Don't set SEC_RELOC or rel_filepos,
	and don't write out relocs, if we are stripping.
	(xcoff_link_input_bfd): Don't set up reloc if we are stripping.
	(xcoff_write_global_symbol): Don't write out symbol or reloc if we
	are stripping.

	* configure.in: Don't include elf.lo again for ELF targets; it's
	always in the library anyhow.
	* configure: Rebuild.

	* bfd-in2.h: Rebuild.

	* elf32-sparc.c (sparc_elf_wdisp16_reloc): Cast to bfd_byte *, not
	char *, when calling bfd_get_32 and bfd_put_32.